# Hospital_Managment_System

./: .dockerignore  .env  .env.docker  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml  run.py  stop.sh
alembic/: env.py
alembic/versions/: c76ba9174c93_initial_schema.py  da5bf64d9ae8_add_sys_custom_fields_to_job_status.py
app/: const.py  database.py  main.py  serializers.py  utils.py
docker/postgres/init_test/: create_test_db.sql
dummy_data/: hospital2.csv
models/: __init__.py  hospital.py  jobstatus.py
test/: hospitals.csv
tests/: conftest.py  test_endpoints.py  utils.py
worker/: celery.py  tasks.py
